# imu-playground

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci_checks.yml
app/: Cargo.toml
src/: lib.rs  main.rs
tools/serial/: Cargo.toml
tools/serial/src/: main.rs
tools/vis/: Cargo.toml
tools/vis/src/: main.rs
