[package]
name = "vis"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.9"
crossbeam-channel = "0.5"
csv = "1.2"
serde = "1.0"
serialport = "4.2"

# From https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Also see https://bevyengine.org/learn/book/getting-started/setup/#enable-fast-compiles-optional